2012-05-17  Christian Perrier  <bubulle@Êebian.org>

	* man/po/fr.po: French translation of manpages completed

2012-05-17  Simon Brandmair  <sbrandmair@gmx.net>

	* man/po/de.po: German translation of manpages completed
          Closes: #673234

2012-02-12  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: New placeholder for the next release (4.1.5.1 expected)

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* src/passwd.c: (non PAM flavour) Report permission denied when
	access to /etc/shadow fails with EACCES.

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* lib/nscd.c: Add missing newline to error message.
	* lib/nscd.c: If nscd is installed but not in use, then running
	`nscd -i` will exit(1). We shouldn't warn in this case since this
	is not abnormal behavior.

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* man/.gitignore: Add generate_mans.deps

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* man/grpck.8.xml: Relocate space.

2012-02-13  Mike Frysinger  <vapier@gentoo.org>

	* libmisc/copydir.c: Add missing #include <stdarg.h>

2012-02-12  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Set release date.

2012-02-12  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2012-02-11  Giuseppe Sacco  <eppesuig@debian.org>

	* man/po/it.po: Updated after review.

2012-02-11  Nicolas François  <nicolas.francois@centraliens.net>

	* man/it/Makefile.am: Activate all manpages.
	* man/po/it.po: Fix formal issues (end of lines).

2012-02-11  Giuseppe Sacco  <eppesuig@debian.org>

	* man/po/it.po: Updated to 1173t.

2012-01-30  Nicolas François  <nicolas.francois@centraliens.net>

	* man/useradd.8.xml, man/su.1.xml, man/po/da.po, man/po/ru.po,
	man/po/fr.po, man/po/de.po, man/po/sv.po, man/po/pl.po,
	man/po/it.po, man/po/shadow-man-pages.pot, man/po/zh_CN.po: Fix
	two typos. Thanks to Giuseppe Sacco. Unfuzzy translations