@@ -1,3 +1,11 @@
+2012-05-17  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* NEWS, src/login.c: Log in utmp / utmpx / wtmp also when PAM is
+	enabled. This is not done by pam_lastlog. This was broken on
+	2011-07-23.
+	* NEWS, libmisc/utmp.c: Do not log in wtmp when PAM is enabled.
+	This is done by pam_lastlog.
+
 2012-05-17  Christian Perrier  <bubulle@Êebian.org>
 
 	* man/po/fr.po: French translation of manpages completed
